--- a/src/almacen/form/providers/ProviderStatusBitacoraDialog.form
+++ b/src/almacen/form/providers/ProviderStatusBitacoraDialog.form
@@ -152,7 +152,7 @@
             <Component class="javax.swing.JButton" name="jButton1">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/img/floppy-disk-icon.png"/>
+                  <Image iconType="3" name="/almacen/icons24/guardar-24.png"/>
                 </Property>
                 <Property name="toolTipText" type="java.lang.String" value="Agregar"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
