--- a/src/almacen/form/providers/ViewOrdersProvidersForm.form
+++ b/src/almacen/form/providers/ViewOrdersProvidersForm.form
@@ -72,6 +72,8 @@
                           <Component id="jbtnSearch" min="-2" pref="30" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="jbtnAddOrder" min="-2" pref="30" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="jbtnBitacoraProveedor" min="-2" pref="30" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="txtSearchByNameProvider" min="-2" pref="115" max="-2" attributes="0"/>
@@ -177,6 +179,7 @@
                                   </Group>
                               </Group>
                               <Component id="jbtnAddOrder" min="-2" max="-2" attributes="0"/>
+                              <Component id="jbtnBitacoraProveedor" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
                       </Group>
@@ -457,13 +460,30 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/almacen/icons24/agregar-24.png"/>
             </Property>
-            <Property name="toolTipText" type="java.lang.String" value="Buscar"/>
+            <Property name="toolTipText" type="java.lang.String" value="Agregar nueva orden"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Hand Cursor"/>
             </Property>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnAddOrderActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="jbtnBitacoraProveedor">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Arial" size="12" style="0"/>
+            </Property>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/almacen/icons24/inventario-24.png"/>
+            </Property>
+            <Property name="toolTipText" type="java.lang.String" value="Bitacora seguimiento proveedor"/>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Hand Cursor"/>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnBitacoraProveedorActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
